--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -3,7 +3,7 @@ name: Generate Snake
 on:
   schedule: # Runs daily at midnight UTC
     - cron: "0 0 * * *"
-  workflow_dispatch: # Allow manual trigger
+  workflow_dispatch: # Manual trigger
   push:
     branches:
       - main
@@ -20,11 +20,14 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: Likhit-Kumar
-          outputs: dist/github-contribution-grid-snake.svg
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake-light.svg?palette=github-light
 
       - name: Push snake to output branch
         uses: EndBug/add-and-commit@v9
         with:
           branch: output
           message: "🐍 Generate Snake"
-          add: "dist/github-contribution-grid-snake.svg"
+          add: "dist/*"
