--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -24,6 +24,12 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
             dist/github-contribution-grid-snake-light.svg?palette=github-light
+            dist/github-contribution-grid-snake.gif
+            dist/github-contribution-grid-snake.gif?palette=github-dark
+            dist/github-contribution-grid-snake.gif?palette=github-light
+            dist/github-contribution-grid-snake.apng
+            dist/github-contribution-grid-snake.apng?palette=github-dark
+            dist/github-contribution-grid-snake.apng?palette=github-light
 
       - name: Push snake to output branch
         uses: EndBug/add-and-commit@v9
