--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,39 +1,33 @@
-name: Generate Snake
+name: Generate Snake Animation
 
 on:
-  schedule: # Runs daily at midnight UTC
-    - cron: "0 0 * * *"
-  workflow_dispatch: # Allow manual trigger
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: "0 0 * * *"   # every day at midnight UTC
+  workflow_dispatch:       # manual trigger
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Generate GitHub Contribution Snake
+      - name: Generate snake animation
         uses: Platane/snk@v3
         with:
           github_user_name: Likhit-Kumar
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake-light.svg?palette=github-light
+            dist/github-contribution-grid-snake-dark.svg
+            dist/github-contribution-grid-snake-light.svg
             dist/github-contribution-grid-snake.gif
-            dist/github-contribution-grid-snake-dark.gif?palette=github-dark
-            dist/github-contribution-grid-snake-light.gif?palette=github-light
-            dist/github-contribution-grid-snake.apng
-            dist/github-contribution-grid-snake-dark.apng?palette=github-dark
-            dist/github-contribution-grid-snake-light.apng?palette=github-light
+            dist/github-contribution-grid-snake-dark.gif
+            dist/github-contribution-grid-snake-light.gif
 
-      - name: Push snake to output branch
-        uses: EndBug/add-and-commit@v9
+      - name: Push generated files
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          branch: output
-          message: "🐍 Generate Snake"
-          add: "dist/*"
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
